# nweather

./: .gitignore  .main.cpp.swp  CMakeLists.txt  README.md  configure.bat  main.cpp  make.sh  makefile  networkClient.cpp  networkClient.h  nweather  weather.cpp  weather.h
nevinAPI/: nweatherAPI.cpp  nweatherAPI.h
src/: CMakeCache.txt  CMakeLists.txt  README.md  main.cpp  make.sh  makefile  networkClient.cpp  nweather  weather.cpp  weather.h
src/HTTPRequest/: CMakeLists.txt  HTTPRequest.hpp
src/URI/: CMakeLists.txt  URI.h
src/include/: networkClient.h  weather.h
src/networkclient/: CMakeLists.txt  networkClient.cpp
src/nevinAPI/: nweatherAPI.cpp
src/nlohmann/: CMakeLists.txt
src/weather/: CMakeLists.txt  weather.cpp  weather.h
